<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" >
        </EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:clickable="true"
                android:text="@string/DateStr" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:clickable="true"
                android:text="@string/TimeStr" />
        </LinearLayout>

        <EditText
            android:id="@+id/body"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:editable="true"
            android:hint="@string/body"
            android:scrollbars="vertical" />

        <CheckBox
            android:id="@+id/checkboxPhoto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/MakePhoto" />

        <ImageView
            android:id="@+id/imagePhoto"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:src="@drawable/ic_action_camera" />

        <CheckBox
            android:id="@+id/checkboxCall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/CallTo" />


        <RelativeLayout
            android:id="@+id/viewCall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >


            <EditText
                android:id="@+id/editTextCall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/buttonCall"
                android:layout_centerHorizontal="true"
                android:inputType="phone"
                android:hint="@string/phone_number"/>

            <ImageButton
                android:id="@+id/buttonCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_action_person"
                android:background="@drawable/bt_bg_sel"/>
        </RelativeLayout>

        <CheckBox
            android:id="@+id/checkboxSMS"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/SendSMS" />

        <LinearLayout
            android:id="@+id/viewSMS"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextSMS"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/buttonSMS"
                    android:layout_centerHorizontal="true"
                    android:inputType="phone"
                    android:hint="@string/phone_number"/>

                <ImageButton
                    android:id="@+id/buttonSMS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_action_person"
                    android:background="@drawable/bt_bg_sel"/>
            </RelativeLayout>
            <EditText
                android:id="@+id/editTextSMSText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/sms_content"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkboxRecord"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/RecordNote" />

        <LinearLayout
            android:id="@+id/viewRecord"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="Chronometer" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/buttonRecord"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_action_record"
                    android:background="@drawable/bt_bg_sel"/>

                <ImageButton
                    android:id="@+id/buttonPlay"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_action_play"
                    android:background="@drawable/bt_bg_sel" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>